--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -22,13 +22,19 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+            <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div id="sample-metadata" class="panel-body">
+            <table id="patient-table" class="table">
+
+              <tbody></tbody>
+            </table>
+
+          </div>
         </div>
       </div>
       <div class="col-md-5">
@@ -47,9 +53,11 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./static/js/app.js"></script>
-  <script src="./static/js/bonus.js"></script>
+  <script src="app1.js"></script>
   <script src="samples.json"></script>
+
+  <!-- <script src="./static/js/bonus.js"></script> -->
+ 
   
 </body>
 
