--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -22,7 +22,7 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-            <select id="selDataset" onchange="optionChanged(this.value)"></select>
+            <select id="selDataset" onchange="dropdownchange(this.value)"></select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -54,7 +54,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="app1.js"></script>
-  <script src="samples.json"></script>
+  <!-- <script src="samples.json"></script> -->
 
   <!-- <script src="./static/js/bonus.js"></script> -->
  
